Product model, db fields, views config

--- a/app/views/home/_trends.html.haml
+++ b/app/views/home/_trends.html.haml
@@ -15,86 +15,29 @@
         .tab-container
           #tab-1.tab-panel.active
             %ul.product-list.owl-carousel{"data-autoplayhoverpause" => "true", "data-autoplaytimeout" => "1000", "data-dots" => "false", "data-loop" => "true", "data-margin" => "30", "data-nav" => "true", "data-responsive" => "{\"0\":{\"items\":1},\"600\":{\"items\":3},\"1000\":{\"items\":4}}"}
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Sexy Lady
-                  .content_price
-                    %span.price.product-price 179 грн.
-                  %br
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Футболка Reebok Crossfit
-                  .content_price
-                    %span.price.product-price 179 грн.
-                  %br
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Футболка Nike
-                  .content_price
-                    %span.price.product-price 179 грн.
-                  %br
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Футболка Puma Sport
-                  .content_price
-                    %span.price.product-price 179 грн.
-                  %br
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Футболка Winner
-                  .content_price
-                    %span.price.product-price 179 грн.
-                  %br
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
+              - @products.each do |product|
+                %li
+                  .left-block
+                    %a{:href => "#"}
+                      = image_tag(product.image.url(:index), alt: 'product', class: 'img-responsive')
+                    .group-price
+                      - if product.novelty?
+                        %span.product-new Новинка
+                      - if product.old_price.present?
+                        %span.product-sale Скидка
+                  .right-block
+                    %h5.product-name
+                      %a{:href => "#"}
+                        = product.name
+                    .content_price
+                      - if product.old_price.present?
+                        %span.price.old-price= number_to_currency(product.old_price, locale: :uk, precision: 0)
+                      %span.price.product-price
+                        = number_to_currency(product.price, locale: :uk, precision: 0)
+                    %br
+                    .btn.btn-cart
+                      = fa_icon('shopping-cart lg')
+                      В корзину
           #tab-2.tab-panel
             %ul.product-list.owl-carousel{"data-autoplayhoverpause" => "true", "data-autoplaytimeout" => "1000", "data-dots" => "false", "data-loop" => "true", "data-margin" => "30", "data-nav" => "true", "data-responsive" => "{\"0\":{\"items\":1},\"600\":{\"items\":3},\"1000\":{\"items\":4}}"}
               %li
