--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -62,7 +62,7 @@
             #navbar.navbar-collapse.collapse
               %ul.nav.navbar-nav
                 %li
-                  %a{:href => "#"} Главная
+                  = link_to "Главная", root_path
                 %li
                   %a{:href => "category.html"} Распродажа
                 %li
