--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1942,13 +1942,18 @@ span.notify-right{
   border: 1px solid #ffffff;
   margin: 0 auto;
 }
+.product-list.list li .left-block img{
+  max-height: 200px;
+  transition:all 0.3s;
+  border: 1px solid #ffffff;
+  margin: 0 auto;
+}
 .product-list li:hover img{
   border: 1px solid rgba(255, 102, 51, 0.4);
 }
 .product-list li .right-block{
     padding: 0 15px;
     margin-top: 15px;
-    text-align: center;
 }
 .product-list li .quick-view{
     position: absolute;
@@ -2047,7 +2052,6 @@ span.notify-right{
 }
 .product-list li .product-name{
     padding-bottom: 5px;
-    text-align: center;
     font-size: 16px;
     font-weight: 600;
 }
@@ -2066,7 +2070,7 @@ span.notify-right{
 }
 .product-list li .old-price{
     text-decoration:line-through;
-    margin-left: 11px;
+    // margin-left: 11px;
     color: #666;
     font-size: 24px;
 
