slugs(gems friendly_id, babosa) & Product#genders

--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -22,7 +22,7 @@
               %span list
           / PRODUCT LIST
           %ul.row.product-list.grid
-            - @category.products.each do |product|
+            - @products.each do |product|
               %li.col-sx-12.col-sm-4
                 .product-container
                   .left-block
