--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,19 +1,19 @@
-%h1 Listing products
+// %h1 Listing products
 
-%table
-  %thead
-    %tr
-      %th
-      %th
-      %th
+// %table
+//   %thead
+//     %tr
+//       %th
+//       %th
+//       %th
 
-  %tbody
-    - @products.each do |product|
-      %tr
-        %td= link_to 'Show', product
-        %td= link_to 'Edit', edit_product_path(product)
-        %td= link_to 'Destroy', product, :method => :delete, :data => { :confirm => 'Are you sure?' }
+//   %tbody
+//     - @products.each do |product|
+//       %tr
+//         %td= link_to 'Show', product
+//         %td= link_to 'Edit', edit_product_path(product)
+//         %td= link_to 'Destroy', product, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
-%br
+// %br
 
-= link_to 'New Product', new_product_path
+// = link_to 'New Product', new_product_path
