--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -80,7 +80,7 @@
           .page-product-box
             %h3.heading Вам так же может понравиться
             %ul.product-list.owl-carousel{"data-autoplayhoverpause" => "true", "data-autoplaytimeout" => "1000", "data-dots" => "false", "data-loop" => "true", "data-margin" => "30", "data-nav" => "true", "data-responsive" => "{\"0\":{\"items\":1},\"600\":{\"items\":3},\"1000\":{\"items\":4}}"}
-              - @product.related_products.each do |product|
+              - @related_products.each do |product|
                 %li
                   .left-block
                     = link_to category_product_path(product.category, product) do
