--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,5 +21,6 @@
   %body
     = render 'layouts/header'
     = render 'layouts/navbar'
+    = render 'layouts/breadcrumbs'
     = yield
     = render 'layouts/footer'
