--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,17 +1,6 @@
+- breadcrumb :product, @product
 .columns-container
   #columns.container
-    / breadcrumb
-    .breadcrumb.clearfix
-      %a.home{:href => "#", :title => "Return to Home"} Home
-      %span.navigation-pipe
-      %a{:href => "#", :title => "Return to Home"} Fashion
-      %span.navigation-pipe
-      %a{:href => "#", :title => "Return to Home"} Women
-      %span.navigation-pipe
-      %a{:href => "#", :title => "Return to Home"} Dresses
-      %span.navigation-pipe
-      %span.navigation_page Maecenas consequat mauris
-    / ./breadcrumb
     / row
     .row
       = render 'sidebar'
