--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,6 +19,7 @@
 
 
   %body
+    = render 'layouts/flash_messages'
     = render 'layouts/header'
     = render 'layouts/navbar'
     = render 'layouts/breadcrumbs'
