--- a/app/views/line_items/_line_item.html.haml
+++ b/app/views/line_items/_line_item.html.haml
@@ -1,6 +1,6 @@
-%li.product-info
+%li.product-info{class: "item-#{line_item.id}"}
   .p-left
-    = link_to '', line_item, method: :delete, class: 'remove_link'
+    = link_to '', line_item, method: :delete, class: 'remove_link', remote: true
     = link_to category_product_path(line_item.product.category, line_item.product) do
       = image_tag line_item.product.image.url(:thumb), class: 'img-responsive', alt: "#{line_item.product.name}"
   .p-right
