--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -45,7 +45,7 @@
                     %br
                     %span.discount= discount(@product.old_price, @product.price)
               = form_for @product.line_items.new, remote: true do |f|
-                = f.hidden_field :product_id, value: "#{@product.id}"
+                = f.hidden_field :product_id, value: @product.id
                 .form-option
                   .attributes.size-chart
                     .attribute-label Размер:
