--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -23,34 +23,38 @@
               %span list
           / PRODUCT LIST
           %ul.row.product-list.grid
-            - @products.each do |product|
-              %li.col-sx-12.col-sm-4
-                .product-container
-                  .left-block
-                    = link_to category_product_path(product.category, product) do
-                      = image_tag(product.image.url(:index), alt: 'product', class: 'img-responsive')
-                    .group-price
-                      - if product.novelty?
-                        %span.product-new Новинка
-                      - if product.old_price.present?
-                        %span.product-sale Скидка
-                  .right-block
-                    %h5.product-name
+            - if @products.empty?
+              .container.category-empty
+                В этой категории пока нет товаров
+            - else
+              - @products.each do |product|
+                %li.col-sx-12.col-sm-4
+                  .product-container
+                    .left-block
                       = link_to category_product_path(product.category, product) do
-                        = product.name
-                    .content_price
-                      - if product.old_price.present?
-                        %span.price.old-price= number_to_currency(product.old_price, locale: :uk, precision: 0)
-                      %span.price.product-price
-                        = number_to_currency(product.price, locale: :uk, precision: 0)
-                    .info-orther
-                      %p Item Code: #453217907
-                      %p.availability
-                        Availability:
-                        %span In stock
-                      .product-desc
-                        = truncate(product.description, length: 180, separator: ' ', escape: false)
-                    %br
-                    .btn.btn-cart-orange
-                      = fa_icon('shopping-cart lg')
-                      В корзину
+                        = image_tag(product.image.url(:index), alt: 'product', class: 'img-responsive')
+                      .group-price
+                        - if product.novelty?
+                          %span.product-new Новинка
+                        - if product.old_price.present?
+                          %span.product-sale Скидка
+                    .right-block
+                      %h5.product-name
+                        = link_to category_product_path(product.category, product) do
+                          = product.name
+                      .content_price
+                        - if product.old_price.present?
+                          %span.price.old-price= number_to_currency(product.old_price, locale: :uk, precision: 0)
+                        %span.price.product-price
+                          = number_to_currency(product.price, locale: :uk, precision: 0)
+                      .info-orther
+                        %p Item Code: #453217907
+                        %p.availability
+                          Availability:
+                          %span In stock
+                        .product-desc
+                          = truncate(product.description, length: 180, separator: ' ', escape: false)
+                      %br
+                      .btn.btn-cart-orange
+                        = fa_icon('shopping-cart lg')
+                        В корзину
