--- a/app/views/home/_new_collection.html.haml
+++ b/app/views/home/_new_collection.html.haml
@@ -10,252 +10,50 @@
             %a{"data-toggle" => "tab", :href => "#new-collection-tab-1"} Мужчинам
           %li
             %a{"data-toggle" => "tab", :href => "#new-collection-tab-2"} Женщинам
-          %li
-            %a{"data-toggle" => "tab", :href => "#new-collection-tab-3"} Детям
         .tab-container
           #new-collection-tab-1.tab-panel.active
             %ul.product-list.owl-carousel{"data-autoplayhoverpause" => "true", "data-autoplaytimeout" => "1000", "data-dots" => "false", "data-loop" => "true", "data-margin" => "30", "data-nav" => "true", "data-responsive" => "{\"0\":{\"items\":1},\"600\":{\"items\":3},\"1000\":{\"items\":4}}"}
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Sexy Lady
-                  .content_price
-                    %span.price.old-price 210 грн.
-                    %span.price.product-price 179 грн.
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Футболка Reebok Crossfit
-                  .content_price
-                    %span.price.old-price 210 грн.
-                    %span.price.product-price 179 грн.
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Футболка Nike
-                  .content_price
-                    %span.price.old-price 210 грн.
-                    %span.price.product-price 179 грн.
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Футболка Puma Sport
-                  .content_price
-                    %span.price.old-price 210 грн.
-                    %span.price.product-price 179 грн.
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Футболка Winner
-                  .content_price
-                    %span.price.old-price 210 грн.
-                    %span.price.product-price 179 грн.
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
+              - @new_products.each do |product|
+                %li
+                  .left-block
+                    = link_to category_product_path(product.category, product) do
+                      = image_tag(product.image.url(:index), alt: 'product', class: 'img-responsive')
+                    .group-price
+                      - if product.novelty?
+                        %span.product-new Новинка
+                      - if product.old_price.present?
+                        %span.product-sale Скидка
+                  .right-block.text-center
+                    %h5.product-name
+                      = link_to category_product_path(product.category, product) do
+                        = product.name
+                    .content_price
+                      - if product.old_price.present?
+                        %span.price.old-price= number_to_currency(product.old_price, locale: :uk, precision: 0)
+                      %span.price.product-price
+                        = number_to_currency(product.price, locale: :uk, precision: 0)
+                    %br
+                    = link_to 'Подробнее', category_product_path(product.category, product), class: 'btn btn-cart-orange'
           #new-collection-tab-2.tab-panel
             %ul.product-list.owl-carousel{"data-autoplayhoverpause" => "true", "data-autoplaytimeout" => "1000", "data-dots" => "false", "data-loop" => "true", "data-margin" => "30", "data-nav" => "true", "data-responsive" => "{\"0\":{\"items\":1},\"600\":{\"items\":3},\"1000\":{\"items\":4}}"}
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Sexy Lady
-                  .content_price
-                    %span.price.old-price 210 грн.
-                    %span.price.product-price 179 грн.
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Футболка Reebok Crossfit
-                  .content_price
-                    %span.price.old-price 210 грн.
-                    %span.price.product-price 179 грн.
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Футболка Nike
-                  .content_price
-                    %span.price.old-price 210 грн.
-                    %span.price.product-price 179 грн.
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Футболка Puma Sport
-                  .content_price
-                    %span.price.old-price 210 грн.
-                    %span.price.product-price 179 грн.
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Футболка Winner
-                  .content_price
-                    %span.price.old-price 210 грн.
-                    %span.price.product-price 179 грн.
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
-          #new-collection-tab-3.tab-panel
-            %ul.product-list.owl-carousel{"data-autoplayhoverpause" => "true", "data-autoplaytimeout" => "1000", "data-dots" => "false", "data-loop" => "true", "data-margin" => "30", "data-nav" => "true", "data-responsive" => "{\"0\":{\"items\":1},\"600\":{\"items\":3},\"1000\":{\"items\":4}}"}
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Sexy Lady
-                  .content_price
-                    %span.price.old-price 210 грн.
-                    %span.price.product-price 179 грн.
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Футболка Reebok Crossfit
-                  .content_price
-                    %span.price.old-price 210 грн.
-                    %span.price.product-price 179 грн.
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Футболка Nike
-                  .content_price
-                    %span.price.old-price 210 грн.
-                    %span.price.product-price 179 грн.
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Футболка Puma Sport
-                  .content_price
-                    %span.price.old-price 210 грн.
-                    %span.price.product-price 179 грн.
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
-              %li
-                .left-block
-                  %a{:href => "#"}
-                    = image_tag('theme-images/bs2', alt: 'product', class: 'img-responsive')
-                  .group-price
-                    %span.product-new Новинка
-                    %span.product-sale Со скидкой
-                .right-block
-                  %h5.product-name
-                    %a{:href => "#"} Футболка Winner
-                  .content_price
-                    %span.price.old-price 210 грн.
-                    %span.price.product-price 179 грн.
-                  .btn.btn-cart
-                    = fa_icon('shopping-cart lg')
-                    В корзину
+              - @new_products_female.each do |product|
+                %li
+                  .left-block
+                    = link_to category_product_path(product.category, product) do
+                      = image_tag(product.image.url(:index), alt: 'product', class: 'img-responsive')
+                    .group-price
+                      - if product.novelty?
+                        %span.product-new Новинка
+                      - if product.old_price.present?
+                        %span.product-sale Скидка
+                  .right-block.text-center
+                    %h5.product-name
+                      = link_to category_product_path(product.category, product) do
+                        = product.name
+                    .content_price
+                      - if product.old_price.present?
+                        %span.price.old-price= number_to_currency(product.old_price, locale: :uk, precision: 0)
+                      %span.price.product-price
+                        = number_to_currency(product.price, locale: :uk, precision: 0)
+                    %br
+                    = link_to 'Подробнее', category_product_path(product.category, product), class: 'btn btn-cart-orange'
